[gd_scene load_steps=5 format=3 uid="uid://k6wqmjqaa63w"]

[ext_resource type="Script" path="res://Scenes/ufo.gd" id="1_pvjf0"]
[ext_resource type="Texture2D" uid="uid://5s1qaxknbe1f" path="res://Assets/Ufo/Ufo.png" id="1_r4y8f"]
[ext_resource type="Script" path="res://Scenes/SpawnTimer.gd" id="3_6sd1c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ie1am"]
size = Vector2(16, 7)

[node name="UFO" type="Area2D"]
scale = Vector2(4, 4)
collision_layer = 64
collision_mask = 2
script = ExtResource("1_pvjf0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_r4y8f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ie1am")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-7.985, -3.555, 16.04, 7.06)

[node name="ShootingPoint" type="Node2D" parent="."]
position = Vector2(0, 2.75)

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
script = ExtResource("3_6sd1c")
min_time = 1
max_time = 3

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
